--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "dependencies": {
     "gatsby": "^2.3.25",
     "gatsby-image": "^2.0.39",
-    "gatsby-plugin-feed": "^2.1.1",
-    "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-manifest": "^2.0.29",
-    "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-remark-embed-video": "d4rekanguok/gatsby-remark-embed-video#feat/custom-markers",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.2.8",
     "gatsby-remark-responsive-iframe": "^2.1.1",
@@ -30,8 +28,6 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
@@ -49,7 +45,8 @@
     "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
   },
   "scripts": {
-    "build": "gatsby build",
+    "install-plugins": "cd plugins/gatsby-remark-comments && yarn && cd ../gatsby-remark-spoilers && yarn",
+    "build": "yarn install-plugins && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
